--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-3836573422628323~5196664234</string>
 	<key>CFBundleDisplayName</key>
 	<string>Player App</string>
 	<key>CFBundleExecutable</key>
@@ -16,7 +18,6 @@
 <string>App needs access to videos</string>
 <key>NSPhotoLibraryAddUsageDescription</key>
 <string>App needs permission to delete videos</string>
-
 	<key>NSAppTransportSecurity</key>
   <key>NSAllowsArbitraryLoads</key>
   <key>NSPhotoLibraryUsageDescription</key>
